# cursosalura

./: .gitignore  README.md  pyproject.toml
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_aplicando_POO/: Album.cs  Banda.cs  C_Sharp_aplicando_POO.sln  Episodio.cs  Genero.cs  Musica.cs  Podcast.cs  Program.cs
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_consumindo_api_e_LINQ/: Screensound.cs  musicas-favoritas-chico.json
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_consumindo_api_e_LINQ/Filtros/: LinqFilter.cs  LinqOrder.cs
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_consumindo_api_e_LINQ/Modelos/: Musica.cs  MusicasPreferidas.cs
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_dominando_POO/ScreenSound/: Program.cs  ScreenSound.sln
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_dominando_POO/ScreenSound/Menus/:  MenuSair.cs  Menu.cs  MenuAvaliarUmAlbum.cs  MenuAvaliarUmaBanda.cs  MenuExibirDetalhes.cs  MenuMostrarBandasRegistradas.cs  MenuRegistrarAlbum.cs  MenuRegistrarBanda.cs
Aprenda_a_programar_em_CSharp_com_POO/C_Sharp_dominando_POO/ScreenSound/Modelos/: Album.cs  (+4 more)
Aprenda_a_programar_em_CSharp_com_POO/c_sharp_criando_sua_primeira_aplicação/Projeto_Screen_sound/: Program.cs  Projeto_Screen_sound.sln
Python Para Data Science/: NumPy_Analise_numerica.ipynb  Pandas_conhecendo_a_biblioteca.ipynb  Python_funcoes_estruturas_excecoes.ipynb  Revisando_Python_Data_Science.ipynb
visao_computacional_com_OpenCV/: Análise_e_Classificação_de_Faces.ipynb  Detecção_de_texto_em_placas_de_carro.ipynb  Projeto_Final_OCR.ipynb  Reconhecimento_de_Texto_OCR_OpenCV.ipynb
