[tool.poetry]
name = "cursosalura"
version = "0.1.0"
description = "Projeto destinado a armazenar o conteudos das aulas dos cursos alura"
authors = ["GustavoDwSantos <gustavos200116@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
matplotlib = "^3.7.1"
opencv-contrib-python = "^4.7.0.72"
seaborn = "^0.12.2"
dlib = "^19.24.2"
notebook = "^6.5.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
